--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "coding-quiz",
+  "name": "mc-19",
   "version": "1.0.0",
-  "description": "",
+  "description": "Module 19 challenge - Test Suite",
   "type": "module",
   "scripts": {
     "start": "npm run client:build && npm run server",
@@ -13,15 +13,20 @@
     "client:dev": "cd client && npm run dev",
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "cypress": "npx cypress open",
+    "test-component": "npx cypress run --component",
+    "test": "npx cypress run --browser electron --headless",
+     "test-gui": "npx cypress open --detached"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "JossieHaven",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
+    "@testing-library/cypress": "10.0.2",
     "cypress": "^13.13.1",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
@@ -30,5 +35,15 @@
     "typescript": "^5.5.3",
     "vitest": "^2.0.3",
     "wait-on": "^7.2.0"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JossieHaven/tech-quiz-test-suite-mc19.git"
+  },
+  "types": "./vite.config.d.ts",
+  "bugs": {
+    "url": "https://github.com/JossieHaven/tech-quiz-test-suite-mc19/issues"
+  },
+  "homepage": "https://github.com/JossieHaven/tech-quiz-test-suite-mc19#readme"
 }
